# cspvalidator

./: README.md  pyproject.toml
cspvalidator/: cli.py
